Fix LogoTitle spacing to be the same as other page-width content

--- a/src/components/content/logo-title/LogoTitle.module.css
+++ b/src/components/content/logo-title/LogoTitle.module.css
@@ -1,3 +1,7 @@
+.container {
+  max-width: var(--body-max-width);
+}
+
 .logo {
   width: 90%;
   max-width: 50vw;
